      syntax errors in an expansion can be treated as a string instead of
      logging or causing an error, due to the internal use of bool_lax
      instead of bool when processing it.

JH/02 Add EXPERIMENTAL_DANE, allowing for using the DNS as trust-anchor for
      server certificates when making smtp deliveries.

JH/03 Support secondary-separator specifier for MX, SRV, TLSA lookups.


Exim version 4.84
-----------------
TL/01 Bugzilla 1506: Re-add a 'return NULL' to silence complaints from static
      checkers that were complaining about end of non-void function with no
      return.

JH/01 Bug 1513: Fix parsing of quoted parameter values in MIME headers.
      This was a regression intruduced in 4.83 by another bugfix.

JH/02 Fix broken compilation when EXPERIMENTAL_DSN is enabled.

TL/02 Bug 1509: Fix exipick for enhanced spoolfile specification used when
      EXPERIMENTAL_DSN is enabled.  Fix from Wolfgang Breyha.


Exim version 4.83
-----------------

TF/01 Correctly close the server side of TLS when forking for delivery.

      When a message was received over SMTP with TLS, Exim failed to clear up
      the incoming connection properly after forking off the child process to
      deliver the message. In some situations the subsequent outgoing
      delivery connection happened to have the same fd number as the incoming
      connection previously had. Exim would try to use TLS and fail, logging
      a "Bad file descriptor" error.

TF/02 Portability fix for building lookup modules on Solaris when the xpg4
      utilities have not been installed.

JH/01 Fix memory-handling in use of acl as a conditional; avoid free of
      temporary space as the ACL may create new global variables.

TL/01 LDAP support uses per connection or global context settings, depending
      upon the detected version of the libraries at build time.

TL/02 Experimental Proxy Protocol support: allows a proxied SMTP connection